# python-gotify

./: .bumpversion.cfg  CHANGELOG.md  LICENSE  README.md  gotify.py  noxfile.py  pyproject.toml  readme.org
.github/workflows/: ci.yml  release.yml  run-nox.yml
gotify/: __init__.py  async_gotify.py  errors.py  gotify.py  response_types.py
tests/: conftest.py  test_async_gotify.py  test_gotify.py
tests/test-server/: .gitignore  gotify.db
