[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "gotify"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "d-k-bo", email = "dkbo@mail.de" }]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Home Automation",
    "Topic :: Utilities",
]
dependencies = ["httpx >= 0.22.0"]
dynamic = ["version", "description"]

    [project.optional-dependencies]
    stream = ["websockets >= 10.3"]

    [project.urls]
    Source = "https://github.com/d-k-bo/python-gotify"

[tool]

    [tool.black]
    line-length = 79

    [tool.isort]
    profile = "black"
    line_length = 79

    [tool.mypy]
    show_error_codes = true
    warn_unused_ignores = true
    files = ["gotify/", "tests/"]

    [tool.pytest]

        [tool.pytest.ini_options]
        addopts = "--tb=short"
        testpaths = "tests"
        asyncio_mode = "auto"

    [tool.coverage]

        [tool.coverage.run]
        source = ["gotify"]

        [tool.coverage.report]
        show_missing = true

    [tool.flakeheaven]
    format = "colored"
    max_line_length = 79
    exclude = ["venv/", ".nox/", "*.md"]
    show_source = true
    docstring-convention = "google"

        [tool.flakeheaven.plugins]
        pycodestyle = ["+*", "-E203", "-W503"]
        mccabe = ["+*"]
        pylint = ["+*"]
        pyflakes = ["+*"]
        dlint = ["+*"]
        "flake8-*" = ["+*"]
        flake8-annotations = ["+*", "-ANN1??", "-ANN40?"]
        flake8-docstrings = ["+*", "-D105"]

        [tool.flakeheaven.exceptions."noxfile.py"]
        flake8-annotations = ["-*"]
        flake8-docstrings = ["-*"]
        pycodestyle = ["+*", "-E501"]

        [tool.flakeheaven.exceptions."tests"]
        flake8-annotations = ["-*"]
        flake8-docstrings = ["-*"]

        [tool.flakeheaven.exceptions."gotify/__init__.py"]
        pyflakes = ["+*", "-F401"]

        [tool.flakeheaven.exceptions."gotify/response_types.py"]
        flake8-docstrings = ["-D101"]
