[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "gotify"
version = "0.6.0"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "d-k-bo", email = "d-k-bo@mailbox.org" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
    "Topic :: Utilities",
]
dependencies = ["httpx >= 0.22.0"]
dynamic = ["description"]

    [project.optional-dependencies]
    stream = ["websockets >= 10.3"]
    test = [
        "pytest >= 7.1.2",
        "pytest-cov >= 3.0.0",
        "pytest-asyncio >= 0.18.3",
        "typeguard >= 4.1.5",
    ]

    [project.urls]
    Source = "https://github.com/d-k-bo/python-gotify"

[tool]

    [tool.black]

    [tool.isort]
    profile = "black"

    [tool.mypy]
    show_error_codes = true
    warn_unused_ignores = true
    files = ["gotify/", "tests/"]

    [tool.pytest]

        [tool.pytest.ini_options]
        addopts = "--tb=short"
        testpaths = "tests"
        asyncio_mode = "auto"

    [tool.coverage]

        [tool.coverage.run]
        source = ["gotify"]

        [tool.coverage.report]
        show_missing = true

    [tool.ruff]
    # ceil(1.1 * 88) makes `E501` equivalent to `B950`
    # https://github.com/astral-sh/ruff/issues/389#issuecomment-1528922079
    line-length = 97

    select = ["B", "D", "E", "F", "ANN"]
    ignore = [
        "E203",  # whitespace before ‘,’, ‘;’, or ‘:’ (incompatible with PEP8 and black)
        "E501",  # line too long (to strict, use B950 instead)
        "ANN10", # Missing type annotation for self/cls
        "D105",  # D105 Missing docstring in magic method
    ]

        [tool.ruff.per-file-ignores]
        "gotify/response_types.py" = ["D101"]  # Missing docstring in public class
        "tests/*" = ["D", "ANN"]
        "noxfile.py" = ["D", "ANN"]

        [tool.ruff.pydocstyle]
        convention = "google"
